@@ -1,0 +1,71 @@
+<gconfschemafile>
+	<schemalist>
+		<schema>
+			<key>/schemas/apps/control-center/cc_actions_list</key>
+			<applyto>/apps/control-center/cc_actions_list</applyto>
+			<owner>control-center</owner>
+			<type>list</type>
+			<list_type>string</list_type>
+			<locale name="C">
+				<default><!-- Translators: The format of this string is the task name to be displayed (translate that part) followed by a ";" separator then the filename (DONT translate the file name) of a .desktop file to launch. Multiple entries are separated by a "," -->[Change Desktop Background;background.desktop,Add Printer;gnome-cups-manager.desktop]</default>
+				<short>Task names and associated .desktop files</short>
+				<long>The task name to be displayed in the control-center (thus needing to be translated) followed by a ";" separator then the filename of an associated .desktop file to launch for that task.</long>
+			</locale>
+		</schema>
+		<schema>
+			<key>/schemas/apps/control-center/cc_exit_shell_on_static_action</key>
+			<applyto>/apps/control-center/cc_exit_shell_on_static_action</applyto>
+			<owner>control-center</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Close the control-center when a task is activated</short>
+				<long>if true, the control-center will close when a "Common Task" is activated</long>
+			</locale>
+		</schema>
+		<schema>
+			<key>/schemas/apps/control-center/cc_exit_shell_on_action_start</key>
+			<applyto>/apps/control-center/cc_exit_shell_on_action_start</applyto>
+			<owner>control-center</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Exit shell on start action performed</short>
+				<long>Indicates whether to close the shell when a start action is performed</long>
+			</locale>
+		</schema>
+		<schema>
+			<key>/schemas/apps/control-center/cc_exit_shell_on_action_help</key>
+			<applyto>/apps/control-center/cc_exit_shell_on_action_help</applyto>
+			<owner>control-center</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Exit shell on help action performed</short>
+				<long>Indicates whether to close the shell when a help action is performed</long>
+			</locale>
+		</schema>
+		<schema>
+			<key>/schemas/apps/control-center/cc_exit_shell_on_action_add_remove</key>
+			<applyto>/apps/control-center/cc_exit_shell_on_action_add_remove</applyto>
+			<owner>control-center</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Exit shell on add or remove action performed</short>
+				<long>Indicates whether to close the shell when an add or remove action is performed</long>
+			</locale>
+		</schema>
+		<schema>
+			<key>/schemas/apps/control-center/cc_exit_shell_on_action_upgrade_uninstall</key>
+			<applyto>/apps/control-center/cc_exit_shell_on_action_upgrade_uninstall</applyto>
+			<owner>control-center</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Exit shell on upgrade or uninstall action performed</short>
+				<long>Indicates whether to close the shell when an upgrade or uninstall action is performed</long>
+			</locale>
+		</schema>
+	</schemalist>
+</gconfschemafile>
