@@ -1,5 +1,12 @@
 2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* control-center.schemas.in: added schemas for the new GConf prefix,
+	and add common tasks.
+
+	* Makefile.am: install schemas.
+
+2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* control-center.c: changed GConf prefix to /apps/...
 	(handle_static_action_clicked): prevent capplets from being launched
 	twice.
